fix: remove top margins from horizontal gap list

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -1274,10 +1274,6 @@ img.dragging.ui-draggable-dragging {
 
 .edit-question .qti-blockInteraction .horizontal {
     margin-top: 28px;
-    .qti-choice,
-    .add-option {
-        margin-top: 25px;
-    }
     .qti-choice {
         .mini-tlb{
             white-space: nowrap;
